main.css
/* Background Colors */
.darkest-bg {
  background-color: #0f0f03;
  color: white;
}
.darker-bg {
  background-color: #302e28;
  color: white;
}
.dark-bg {
  background-color: #7c7b79;
  color: white;
}
.light-bg {
  background-color: #f4f3ea;
  color: black;
}
.lightest-bg {
  background-color: #fcfbf5;
  color: black;
}
.white-bg {
  background-color: #ffffff;
  color: black;
}

/* Colors */
.white {
  color: white;
}

.black {
  color: black;
}

.maroon {
  color: maroon;
}

/* Fonts */
.arvo {
  font-family: 'Arvo', monospace;
  font-weight: bold;
}

body, p, li, a {
  font-family: 'Courier New', monospace;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Arvo', monospace;
}

h1, h3 {
  font-weight: bold;
}

a {
  color: maroon;
  font-weight: bold;
}

hr {
  border-color: #f4f3ea;
}

a:hover {
  color: maroon;
  text-decoration: underline;
}

/* Navigation */
.navbar .navbar-brand.landing {
  background-color: #000000;
  width: 30%;
  padding: 15px 30px 35px 30px;
  position: absolute;
  left: 35%;
  top: 0;
  -webkit-clip-path: polygon(0 0, 100% 0, 100% 95%, 0 100%);
  clip-path: polygon(0 0, 100% 0, 100% 95%, 0 100%);
  max-width: 400px;
  z-index: 5;
}

.navbar .navbar-brand.landing img {
  max-height: 95px;
  margin: 0 auto;
}

.navbar .navbar-brand.generic {
  padding: 15px;
}

.navbar .navbar-brand.generic img {
  max-height: 60px;
}

.navbar {
  margin-bottom: 60px;
  font-family: 'Courier New', monospace;
  background-color: #f4f3ea;
}

.navbar-nav .nav-item .nav-link {
  color: #000000;
  font-size: 0.9rem;
}

.cmc-navleft .nav-item {
  margin-left: 15px;
}

.cmc-navright .nav-item {
  margin-right: 15px;
}

.navbar-collapse.show {
  background-color: #f4f3ea;
  z-index: 10;
}

.nav-padding {
  margin-bottom: 200px;
}

/* Content */
body {
  overflow-x: hidden !important;
}

.row {
  margin-bottom: 50px;
  padding: 20px 20px 0 20px;
}

.above-the-fold {
 padding-top: 100px;
}

.btn {
  border-radius: 0;
}

.btn:hover {
  color: maroon;
}

.images-container-landing {
  position: relative;
}

.starry {
  position: absolute;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: -1;
}

.starry img {
  max-height: 50%;
  margin: 25%;
}

.carousel-inner .carousel-item.active,
.carousel-inner .carousel-item-next,
.carousel-inner .carousel-item-prev {
  display: flex;
}

.carousel-inner .carousel-item-right.active,
.carousel-inner .carousel-item-next {
  transform: translateX(10%);
}

.carousel-inner .carousel-item-left.active, 
.carousel-inner .carousel-item-prev {
  transform: translateX(-10%);
}
  
.carousel-inner .carousel-item-right,
.carousel-inner .carousel-item-left{ 
  transform: translateX(0);
  
}

.carousel-item img {
  filter: grayscale(100%);
  border: 3px solid white;
  border-top: 5px solid white;
  border-bottom: 5px solid white;
  max-height: 25vw;
}

.example-thin {
  filter: grayscale(100%);
  border: 4px solid black;
}

@keyframes starry {
  from {
    -ms-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  to {
    -ms-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -webkit-transform: rotate(360deg);
    -o-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.starry {
  -webkit-animation: starry 30s linear infinite;
  -moz-animation: starry 30s linear infinite;
  -ms-animation: starry 30s linear infinite;
  -o-animation: starry 30s linear infinite;
  animation: starry 30s linear infinite;
}

.bbw-1 {
  border-bottom: 1px solid white;
  box-shadow: 4px 4px 8px white;
}

.bbb-1 {
  border-bottom: 1px solid black;
}

.animated-bg {
  background: radial-gradient(circle at center, #ffffff, #fff0db, #ffffff, #fff0db 200%);
	background-size: 400% 400%;
	animation: gradient 20s ease-in-out infinite;
  border: 4px solid black;
}

.mh-100 {
  min-height: 100vh;
}

@keyframes gradient {
	0% {
		background-position: 0% 25%;
	}
	25% {
		background-position: 75% 25%;
	}
	50% {
		background-position: 75% 75%;
	}
	75% {
		background-position: 25% 75%;
	}
	100% {
		background-position: 25% 0%;
	}
}

/* Responsive */
@media (max-width: 767px) {
  .above-the-fold {
    padding-top: 0;
  }

  .nav-padding {
    margin-bottom: 100px;
  }
}

